--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
 }
+html {
+  font-size: 55%;
+}
 body {
   background-color: #f5f5f5;
 }
@@ -146,9 +149,6 @@ ul {
   overflow: hidden;
 }
 .container .wrapper-holder {
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
   display: grid;
   grid-template-columns: repeat(4, 100%);
   height: 100%;
@@ -254,7 +254,6 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.88);
   width: 60vw;
   height: 70vh;
@@ -275,6 +274,7 @@ footer {
   background: darkslategray;
   min-height: 5vh;
   color: #ff7400;
+  max-width: 100%;
 }
 footer a {
   text-decoration: none;
