--- a/css/style.css
+++ b/css/style.css
@@ -9,44 +9,60 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  color: inherit;
   font-family: "Rubik", Arial, Helvetica, sans-serif;
 }
 html {
-  font-size: 62.5%;
+  font-size: 55%;
 }
 body {
-  background-color: #f5f5f5;
-  line-height: 1;
+  background-color: #eaeef0;
+  line-height: 1.2;
 }
-a {
-  text-decoration: none;
-  color: inherit;
-}
-ul {
-  list-style: none;
-  display: flex;
-}
-
-.heroPage {
+#background-img {
   background-image: url("../images/rest-background.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  position: relative;
+}
+ul {
+  list-style: none;
 }
 
-.navBar ul {
-  justify-content: flex-end;
-  padding: 1.5rem;
+.header .navBar ul {
+  display: flex;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 .navBar ul li {
-  padding: 10px 20px;
-  font-size: 22px;
+  margin: 1.5rem;
+  font-size: 2rem;
+  cursor: pointer;
+  border-radius: 2rem;
+  position: relative;
 }
 .navBar ul li:hover {
-  cursor: pointer;
-  background-color: #cccc;
-  color: #fff;
-  border-radius: 10px;
+  opacity: 0.5;
+}
+.navBar ul li::after {
+  content: "";
+  width: 0;
+  height: 0.3rem;
+  border-radius: 1rem;
+  background: #ff7400;
+  position: absolute;
+  bottom: -0.6rem;
+  left: 0;
+  transition: all 0.5s ease-in-out;
+}
+.navBar ul li:hover::after {
+  width: 100%;
 }
 /* search bar */
 .navBar ul li.search-bar {
@@ -58,7 +74,8 @@ ul {
 }
 #search {
   outline: none;
-  border: 1px solid #f5f5f5;
+  border: 1px solid #ff7400;
+  box-shadow: 1px 1px 10px #7772bb;
   padding: 0.8rem;
   border-radius: 0.7rem;
   position: absolute;
@@ -70,60 +87,108 @@ ul {
 }
 #search:focus {
   background-color: #fff;
-  color: #ff7400;
+  color: #0d0d0d;
 }
-/* .i-search {
-  display: none;
-} */
 
 /* main body */
-.mainBody {
-  padding-left: 55px;
+.hero-page {
+  padding-left: 6rem;
+  max-width: 90ch;
+  letter-spacing: 0.3rem;
 }
-.mainBody h1 {
-  font-size: 80px;
+.hero-page h1 {
+  font-size: 8rem;
+  font-weight: 700;
+  color: #181310;
 }
 .form-container {
-  display: flex;
-  padding: 18px 0;
+  padding: 5.4vh 0 1.5vh;
 }
-.mainBody form {
-  border: 2px solid #cccc;
+.form-container form {
+  border: 1px solid #cccc;
   border-radius: 5px;
-  max-width: 30%;
+  /* min-width: 8rem; */
   background-color: #ffffff;
 }
-.form-search {
-  padding: 8px 2px 0px 15px;
-  height: 18px;
+.form-container form {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
 }
-.mainBody input {
-  padding: 10px 1px;
+.form-container form:hover {
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.446);
+}
+.form-container form img {
+  padding: 1.3rem 0 0 1.4rem;
+  max-height: 2.7rem;
+}
+.hero-page input {
+  padding: 1rem 0;
   outline: none;
   border: none;
+  max-width: 70%;
 }
 #location {
-  padding: 11px;
+  padding: 1.5rem;
   color: #ffffff;
   background-color: #ff7400;
   border: none;
   display: block;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  transform: translateX(-4%);
 }
 
-.icons {
+.icon-container {
   display: flex;
   justify-content: flex-start;
-  gap: 30px;
+  gap: 1.8rem;
+  font-size: 1.9rem;
 }
-.icon-inside {
+.icon {
   display: flex;
   gap: 5px;
 }
-.middleSection {
-  padding: 50px 100px 50px 500px;
+.icon img {
+  max-height: 2.3rem;
+  min-width: 2.5rem;
+}
+
+/* About section */
+.aboutSection {
+  position: relative;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: flex-end;
+  justify-content: center;
+  min-height: 80vh;
+  line-height: 1.3;
+  padding: 3rem 9rem;
+  font-size: 2rem;
+  text-align: justify;
+  z-index: 1;
+}
+.aboutSection::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(
+      45deg,
+      rgba(240, 242, 244, 0.942),
+      rgb(196, 196, 201)
+    ),
+    url("../images/Berries_Vanilla_Pies_My_Sweet_Zepol_blog1.png"),
+    url("../images/white-oats.jpg");
+  background-size: cover;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+}
+.aboutSection article {
+  width: 65%;
 }
 .color-me-orange {
   color: #ff7400;
@@ -133,22 +198,43 @@ ul {
   margin-top: 10px;
   margin-bottom: 20px;
 }
-.middleSection li:first-child {
+.aboutSection .buttons {
+  display: flex;
+  padding: 3rem 0;
+  cursor: pointer;
+}
+.aboutSection .buttons:hover {
+  opacity: 0.5;
+}
+.aboutSection button {
+  outline: none;
+  border: none;
+}
+.aboutSection .discover-btn {
   background-color: #ff7400;
-  padding: 10px 15px;
+  font-size: 2rem 3rem;
+  padding: 1rem;
   color: #ffffff;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
-.middleSection li:last-child {
+
+.aboutSection .arrow-btn {
   background-color: #ffae42;
-  padding-top: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+  padding: 1rem 2rem;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
+.aboutSection .discover-btn:hover,
+.arrow-btn:hover {
+  color: #7772bb;
+  fill: #7772bb;
+}
+/* order section */
 .order-section {
-  padding: 50px;
+  padding: 2rem;
   background-color: #e1edf0;
+  font-size: 1.5rem;
 }
 .place-center {
   display: flex;
@@ -157,20 +243,24 @@ ul {
 }
 .order-section ul li {
   border-bottom: 1px solid black;
-  padding: 10px;
+  padding: 1rem;
 }
 .order-section ul li:hover {
   border-color: #ff7400;
   color: #ff7400;
 }
 .food-container {
-  display: flex;
-  gap: 40px;
-  padding-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2.5rem;
+  padding: 5rem 1rem;
+  width: 100%;
+  max-width: 1200px; /* Optional: restricts maximum width */
+  margin: auto;
 }
-.food {
-  height: 200px;
+.food-container img {
   width: 250px;
+  height: 250px;
   border-radius: 5px;
 }
 /* this is for slider */
@@ -239,7 +329,8 @@ ul {
 .book-section {
   flex-direction: column;
   padding: 40px;
-  line-height: 35px;
+  line-height: 1.3;
+  font-size: 1.5rem;
 }
 .book-section h2 {
   font-size: 30px;
@@ -248,8 +339,8 @@ ul {
 .open-days {
   display: flex;
   justify-content: space-between;
-  gap: 190px;
-  line-height: 16px;
+  gap: 40vw;
+  /* line-height: 1.2; */
 }
 .open-days p {
   padding: 5px 0;
@@ -301,19 +392,14 @@ ul {
 video {
   width: 100%;
 }
-.scroll {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-  border-radius: 50%;
-  padding: 18px;
-}
+
 footer {
   text-align: center;
   background: darkslategray;
   min-height: 5vh;
   color: #ff7400;
-  max-width: 100%;
+  min-width: 100%;
+  margin: 0;
 }
 footer a {
   text-decoration: none;
